Changed theme to Material 3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         android:layout_marginBottom="8dp"
         android:text="really really really really really really really really really really long text" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView2"
+        android:text="test"/>
+
 </RelativeLayout>
