--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.TrekTraveler" parent="Theme.Material3.DayNight.NoActionBar" />
+    <style name="Theme.TrekTraveler" parent="Theme.Material3.DayNight.NoActionBar" >
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorPrimaryVariant">#000000</item>
+        <item name="colorOnPrimary">#BBBBBB</item>
+    </style>
 </resources>
