--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,6 @@
     <style name="Theme.TrekTraveler" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="colorPrimary">#FFFFFF</item>
         <item name="colorPrimaryVariant">#000000</item>
-        <item name="colorOnPrimary">#BBBBBB</item>
+        <item name="colorOnPrimary">#4CAF50</item>
     </style>
 </resources>
