Updates to main search page

--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bkgSurface">
@@ -14,7 +15,6 @@
         android:background="?attr/colorPrimary"
         android:contentInsetStart="0dp"
         app:navigationIcon="@drawable/smalllogo"
-        app:navigationIconSize="48dp"
         app:title="Green Trek Traveler"
         app:titleCentered="true"
         app:titleTextAppearance="@style/ToolbarTitleTextStyle"
@@ -26,20 +26,18 @@
         android:id="@+id/welcomeImage"
         android:layout_width="0dp"
         android:layout_height="180dp"
-        android:layout_marginTop="24dp"
         android:scaleType="centerCrop"
         android:src="@drawable/welcome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topAppBar"
-        app:layout_marginBottom="24dp" />
+        app:layout_constraintTop_toBottomOf="@id/topAppBar"/>
 
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:paddingTop="24dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,10 +50,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#1A000000"
             android:contentDescription="Search for location"
-            app:hint="Location"
-            app:iconEnd="@drawable/ic_clear"
-            app:iconStart="@drawable/ic_location"
-            app:layout_marginBottom="0dp" />
+            android:hint="Location"/>
 
         <com.google.android.material.search.SearchBar
             android:id="@+id/searchDate"
@@ -64,7 +59,7 @@
             app:iconEnd="@drawable/ic_clear"
             android:backgroundTint="#1A000000"
             android:contentDescription="Search for date"
-            app:hint="Date" />
+            android:hint="Date"/>
 
         <Button
             android:id="@+id/rightAlignedButton"
