--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,8 @@
         <item name="android:textStyle">bold</item> <!-- Make text bold -->
         <item name="android:textColor">@color/Green</item> <!-- Set your desired text color -->
     </style>
+    <style name="WeekdayTextAppearance">
+        <item name="android:textColor">@color/secondaryText</item>
+        <item name="android:textSize">16sp</item> <!-- Customize as needed -->
+    </style>
 </resources>
