--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.TrekTraveler" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="colorPrimary">#FFFFFF</item>
-        <item name="colorPrimaryVariant">#000000</item>
+        <item name="colorPrimaryVariant">@color/Teal</item>
         <item name="colorOnPrimary">#BBBBBB</item>
     </style>
 </resources>
