--- a/app/src/main/res/layout/cal_screen.xml
+++ b/app/src/main/res/layout/cal_screen.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:theme="@style/Theme.AppCompat.Light"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
@@ -20,8 +21,7 @@
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weekDayTextAppearance="@style/WeekdayTextAppearance"
-            android:selectedWeekBackgroundColor="@color/Teal"/>
+            android:weekDayTextAppearance="@style/WeekdayTextAppearance"/>
 
         <LinearLayout
             android:layout_width="match_parent"
