--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="android:textColor">@color/secondaryText</item>
         <item name="android:textSize">16sp</item> <!-- Customize as needed -->
     </style>
+    <style name="HeadingXLMedium">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:gravity">left</item>
+    </style>
 </resources>
