info screen basics

--- a/app/src/main/res/layout/city_screen.xml
+++ b/app/src/main/res/layout/city_screen.xml
@@ -14,7 +14,8 @@
         android:contentInsetStart="0dp"
         android:padding="0dp"
         app:title="Tucson"
-        app:titleCentered="true"
+        app:titleCentered="false"
+        app:navigationIcon="@drawable/back_arrow"
         app:titleTextAppearance="@style/ToolbarTitleTextStyle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
